# TheEntity

./: README.md  pyproject.toml  test.py  test2.py
theentity/dbframes/: event.py  matches.py  season.py
theentity/scraper/: ftc_api.py
