[tool.poetry]
name = "theentity"
version = "0.1.0"
description = ""
authors = ["Krishna Shah <kshahusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
